<resources>
    <string name="app_name" translatable="false">Iron Buff</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="signup_now">Signup Now</string>
    <string name="forgot_password">Forgot Password?</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="e_mail" translatable="false">E-mail</string>
    <string name="reset_password">Reset Your Password</string>
    <string name="send_mail">Send Mail</string>
    <string name="sign_up">Sign up</string>
    <string name="name_surname">Name Surname</string>
    <string name="register">Register</string>
    <string name="my_profile">My Profile</string>
    <string name="main_menu">Main Menu</string>
    <string name="training_program">Training Program</string>
    <string name="message">Message</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="age">Age</string>
    <string name="sex">Sex</string>
    <string name="weight">Weight</string>
    <string name="height">Height</string>
    <string name="sex_female">Female</string>
    <string name="sex_male">Male</string>
    <string name="open_camera">Open Camera</string>
    <string name="open_gallery">Open Gallery</string>
    <string name="neck">Neck</string>
    <string name="chest">Chest</string>
    <string name="left_arm">Left Arm</string>
    <string name="right_arm">Right Arm</string>
    <string name="waist">Waist</string>
    <string name="hips">Hips</string>
    <string name="left_thigh">Left Thigh</string>
    <string name="right_thigh">Right Thigh</string>
    <string name="left_calf">Left Calf</string>
    <string name="right_calf">Right Calf</string>
    <string name="cm_text" translatable="false">... cm</string>
    <string name="test_date">Date: 11/11/1998</string>
    <string name="test_weight">Weight: 80 kg</string>
    <string name="adminpanel">AdminPanel</string>
    <string name="addProgram">Add new program</string>
    <string name="exercise_list">Exercise List</string>
    <string name="machine">Machine</string>
    <string name="free_weight">Free Weight</string>
    <string name="weight_type">Weight Type</string>
    <string name="exercise_machine">Exercise Machine</string>
    <string name="save">save</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header" translatable="false">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title" translatable="false">Your signature</string>
    <string name="reply_title" translatable="false">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title" translatable="false">Sync email periodically</string>
    <string name="attachment_title" translatable="false">Download incoming attachments</string>
    <string name="attachment_summary_on" translatable="false">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off" translatable="false">Only download attachments when manually requested
    </string>
    <string name="cancel">Cancel</string>
    <string name="okey">Okey</string>
    <string name="protein">Protein</string>
    <string name="fat">Fat</string>
    <string name="karbonhidrat">Carbon\nHidrat</string>
    <string name="calorie">Calorie</string>
    <string name="breakfast">Breakfast</string>
    <string name="add_new_measurement">Add New Measurement</string>
    <string name="lunch">Lunch</string>
    <string name="extra">Extra</string>
    <string name="dinner">Dinner</string>
    <string name="add">+ Add</string>
    <string name="exercise_detail">Exercise detail:</string>
    <string name="exercise_target">Exercise Target:</string>
    <string name="reps">Reps:</string>
    <string name="sets">Sets:</string>
    <string name="add_1">Add</string>
    <string name="carbonhydrat">Carbonhydrat</string>
    <string name="databaseBreakfast" translatable="false">Breakfast</string>
    <string name="databaseLunch" translatable="false">Lunch</string>
    <string name="databaseDinner" translatable="false">Dinner</string>
    <string name="databaseExtra" translatable="false">Extra</string>
    <string name="profil_username">Username:</string>
    <string name="profil_email" translatable="false">E-mail:</string>
    <string name="profil_height">Height:</string>
    <string name="profil_weight">Weight:</string>
    <string name="profil_sex">Sex:</string>
    <string name="profil_name_surname">Name Surname:</string>
    <string name="profil_age">Age:</string>
    <string name="add_food">Add Food</string>
</resources>