<?xml version="1.0" encoding="utf-8"?>
<menu
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        tools:showIn="navigation_view"
>
    <group
            android:checkableBehavior="single"
    >
        <item
                android:id="@+id/myProfileFragment"
                android:icon="@drawable/logo"
                android:title="@string/my_profile"/>
        <item
                android:id="@+id/mainMenuFragment"
                android:icon="@drawable/logo"
                android:title="@string/main_menu"/>
        <item
                android:id="@+id/trainingProgramFragment"
                android:icon="@drawable/logo"
                android:title="@string/training_program"/>
        <item
                android:id="@+id/messageFragment"
                android:icon="@drawable/logo"
                android:title="@string/message"/>
        <item
                android:id="@+id/settingsFragment"
                android:icon="@drawable/logo"
                android:title="@string/settings"/>


    </group>

</menu>