<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context=".MainMenuFragment.MyProfileFragment">


    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center">

        <androidx.cardview.widget.CardView
                android:layout_width="361dp"
                app:cardCornerRadius="250dp"
                android:layout_height="100dp"
                app:cardBackgroundColor="?colorPrimaryDark"
                android:id="@+id/cardView6"
                android:layout_marginTop="50dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">
            <LinearLayout android:layout_width="match_parent"
                          android:gravity="center"
                          android:orientation="vertical"
                          android:paddingStart="10dp"
                          android:layout_marginStart="125dp"
                          android:layout_height="match_parent">
                <TextView android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:textSize="20sp"
                          android:text="@string/profil_name_surname"
                />
                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/name_surname"
                        android:id="@+id/profil_namesurname"
                        android:textStyle="bold"
                        android:fontFamily="sans-serif-light"
                        android:textSize="24sp"
                />
            </LinearLayout>

        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
                android:layout_width="125dp"
                android:layout_height="125dp"
                app:cardCornerRadius="250dp"
                app:cardBackgroundColor="@color/white"
                android:layout_gravity="center"
                android:id="@+id/cardView"

                app:layout_constraintTop_toTopOf="@+id/cardView6"
                app:layout_constraintBottom_toBottomOf="@+id/cardView6"
                app:layout_constraintStart_toStartOf="@+id/cardView6">
            <ImageView android:layout_width="match_parent"
                       android:layout_height="match_parent"
                       android:src="@drawable/logo"
                       android:id="@+id/my_profil_image"
                       tools:ignore="ContentDescription"/>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
                android:layout_width="0dp" android:layout_height="wrap_content"
                android:layout_marginVertical="50dp"
                app:cardCornerRadius="30sp"
                android:layout_marginHorizontal="25dp"
                app:cardBackgroundColor="?colorPrimaryDark"

                app:layout_constraintTop_toBottomOf="@+id/cardView6"
                android:id="@+id/cardView5" app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">
            <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:paddingBottom="30sp"
                    android:paddingTop="20sp"
                    android:layout_height="match_parent"
                    android:paddingHorizontal="10dp"
            >
                <TextView
                        android:text="@string/profil_username"
                        style="@style/ProfilTextView1"
                        app:layout_constraintBottom_toTopOf="@+id/profil_username"
                        app:layout_constraintStart_toStartOf="@+id/guideline6"
                        android:id="@+id/textView3"/>
                <TextView
                        style="@style/ProfilTextView2"
                        android:text="@string/username"
                        android:id="@+id/profil_username"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent"

                        app:layout_constraintHorizontal_bias="0.0"/>

                <TextView style="@style/ProfilTextView1"
                          android:text="@string/profil_email"
                          app:layout_constraintBottom_toTopOf="@+id/profil_email"
                          app:layout_constraintStart_toStartOf="@+id/guideline6" android:id="@+id/textView4"/>
                <TextView style="@style/ProfilTextView2"
                          android:text="@string/e_mail"
                          android:id="@+id/profil_email"
                          app:layout_constraintEnd_toEndOf="parent"
                          app:layout_constraintStart_toStartOf="parent"
                          app:layout_constraintHorizontal_bias="0.0"
                          app:layout_constraintTop_toBottomOf="@+id/profil_username"/>

                <TextView style="@style/ProfilTextView1"
                          android:text="@string/profil_age"
                          app:layout_constraintBottom_toTopOf="@+id/profil_age"
                          app:layout_constraintStart_toStartOf="@+id/guideline6" android:id="@+id/textView5"/>

                <TextView style="@style/ProfilTextView2"
                          android:text="@string/age"
                          android:id="@+id/profil_age"
                          app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
                          app:layout_constraintHorizontal_bias="0.0"
                          app:layout_constraintTop_toBottomOf="@+id/profil_email"/>


                <TextView
                        style="@style/ProfilTextView1"
                        android:text="@string/profil_height"
                        app:layout_constraintBottom_toTopOf="@+id/profil_height"
                        app:layout_constraintStart_toStartOf="@+id/guideline6" android:id="@+id/textView6"/>
                <TextView
                        style="@style/ProfilTextView2"
                        android:text="@string/height"
                        android:id="@+id/profil_height"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintTop_toBottomOf="@+id/profil_age"/>
                <TextView
                        style="@style/ProfilTextView1"
                        android:text="@string/profil_weight"
                        app:layout_constraintBottom_toTopOf="@+id/profil_weight"
                        app:layout_constraintStart_toStartOf="@+id/guideline6" android:id="@+id/textView7"/>
                <TextView style="@style/ProfilTextView2"
                          android:text="@string/weight"
                          android:id="@+id/profil_weight"
                          app:layout_constraintEnd_toEndOf="parent"
                          app:layout_constraintStart_toStartOf="parent"
                          app:layout_constraintHorizontal_bias="0.0"
                          app:layout_constraintTop_toBottomOf="@+id/profil_height"/>
                <TextView
                        style="@style/ProfilTextView1"
                        android:text="@string/profil_sex"
                        app:layout_constraintBottom_toTopOf="@+id/profil_sex"
                        app:layout_constraintStart_toStartOf="@+id/guideline6" android:id="@+id/textView8"/>
                <TextView style="@style/ProfilTextView2"
                          android:text="@string/sex"
                          android:id="@+id/profil_sex"
                          app:layout_constraintEnd_toEndOf="parent"
                          app:layout_constraintStart_toStartOf="parent"
                          app:layout_constraintHorizontal_bias="0.0"
                          app:layout_constraintTop_toBottomOf="@+id/profil_weight"/>
                <androidx.constraintlayout.widget.Guideline
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/guideline6"
                        android:orientation="vertical" app:layout_constraintGuide_percent="0.06648199"/>

            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.cardview.widget.CardView>
        <androidx.constraintlayout.widget.Guideline
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/guideline4"
                app:layout_constraintGuide_begin="386dp"
                android:orientation="vertical"/>
        <androidx.constraintlayout.widget.Guideline
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/guideline5"
                app:layout_constraintGuide_begin="25dp"
                android:orientation="vertical"/>


    </androidx.constraintlayout.widget.ConstraintLayout>


</FrameLayout>