<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context=".loginFragment.SignupFragment">


    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:animateLayoutChanges="true"
            tools:context=".activity.SplashActivity">
        <RelativeLayout
                android:layout_margin="40dp"
                android:layout_width="wrap_content"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:layout_height="wrap_content">
            <LinearLayout android:layout_width="match_parent"
                          android:orientation="horizontal"
                          android:gravity="center"
                          android:id="@+id/lineearPage"
                          android:layout_height="wrap_content">
                <ImageView
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:background="@drawable/logo"
                        android:scaleType="fitCenter"
                />
                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:fontFamily="sans-serif-medium"
                        android:gravity="center"
                        android:textSize="25sp"
                        android:text="@string/sign_up"
                />
            </LinearLayout>
            <RelativeLayout
                    android:id="@+id/rellay_signup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/lineearPage"


            >


                <LinearLayout
                        android:id="@+id/linlay1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:orientation="vertical">

                    <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                        <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="sans-serif-light"
                                android:text="@string/name_surname"
                                android:textAllCaps="true"
                                android:textSize="15sp"/>

                        <EditText
                                android:id="@+id/signup_namesurname"
                                android:layout_width="match_parent"
                                android:layout_height="40dp"
                                android:layout_marginTop="5dp"
                                android:background="@drawable/btn_bg"
                                android:fontFamily="sans-serif-light"
                                android:paddingLeft="15dp"
                                android:paddingRight="15dp"
                                android:singleLine="true"
                                android:textSize="15sp"/>

                    </LinearLayout>
                    <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="20dp"
                            android:orientation="vertical">

                        <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="sans-serif-light"
                                android:text="@string/username"
                                android:textAllCaps="true"
                                android:textSize="15sp"/>

                        <EditText
                                android:layout_width="match_parent"
                                android:id="@+id/signup_username"
                                android:layout_height="40dp"
                                android:layout_marginTop="5dp"
                                android:background="@drawable/btn_bg"
                                android:fontFamily="sans-serif-light"
                                android:singleLine="true"
                                android:paddingLeft="15dp"
                                android:paddingRight="15dp"
                                android:textSize="15sp"/>

                    </LinearLayout>
                    <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="20dp"
                            android:orientation="vertical">

                        <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="sans-serif-light"
                                android:text="@string/e_mail"
                                android:textAllCaps="true"
                                android:textSize="15sp"/>

                        <EditText
                                android:id="@+id/signup_email"
                                android:layout_width="match_parent"
                                android:layout_height="40dp"
                                android:layout_marginTop="5dp"
                                android:background="@drawable/btn_bg"
                                android:fontFamily="sans-serif-light"
                                android:singleLine="true"
                                android:paddingLeft="15dp"
                                android:paddingRight="15dp"
                                android:textSize="15sp"/>

                    </LinearLayout>
                    <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="20dp"
                            android:orientation="vertical">

                        <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="sans-serif-light"
                                android:text="@string/password"
                                android:textAllCaps="true"
                                android:textSize="15sp"/>

                        <EditText
                                android:id="@+id/signup_password"
                                android:layout_width="match_parent"
                                android:layout_height="40dp"
                                android:layout_marginTop="5dp"
                                android:background="@drawable/btn_bg"
                                android:fontFamily="sans-serif-light"
                                android:singleLine="true"
                                android:inputType="textPassword"
                                android:paddingLeft="15dp"
                                android:paddingRight="15dp"
                                android:textSize="15sp"/>

                    </LinearLayout>

                </LinearLayout>
                <Button
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:layout_below="@+id/linlay1"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="50dp"
                        android:background="@drawable/btn_bg"

                        android:fontFamily="sans-serif-medium"
                        android:paddingLeft="70dp"
                        android:paddingRight="70dp"
                        android:text="@string/register"
                        android:textAllCaps="false"
                        android:textColor="@color/white"
                        android:textSize="16sp"
                        android:id="@+id/register_button"/>

            </RelativeLayout>


        </RelativeLayout>


    </RelativeLayout>

</FrameLayout>